 /* $Id: changelog,v 1.1123 2000-09-13 20:59:32 sandervl Exp $ */

 2000-09-12: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: InitCommandLine corrupted the heap
                Created HandleManager class for physical disks
    - GDI32:    StretchDIBits: Open32 always returns height of bitmap (regardless of how many 
                scanlines were copied); now corrected
    - WNASPI32: Fixed FS corruption

 2000-09-13: knut st. osmundsen <knut.stange.osmundsen@mynd.no>
    - KERNEL32: Added method matchModName to Win32ImageBase.
                Used matchModName in LoadLibraryExA.
                Documented and enhanced GetModuleFileNameA/W.
    - Win32k:   Display build time and date on verbose init.
                Made sure build time and date is updated everytime
                it's relinked.

 2000-09-12: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: GetCommandLine changes broke LX executable support. Fixed now.

 2000-09-12: knut st. osmundsen <knut.stange.osmundsen@mynd.no>
    - KERNEL32: Rewrote GetCommandLineA/W. Don't depend on Open32 any longer.
                The commandline strings are moved to global variables in
                wprocess.cpp.
                Added/extended some OSLib calls.

    - Wink32:   When invoking PE.EXE the first argument (Win32 exe name)
                should be in quotes.
                This is not yet corrected for the other invokers. (Scripts/Java).

 2000-09-09: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: Don't dispatch exceptions after application has called
                ExitProcess. (fixes endless loop of exception handler calls
                in RealPlayer 7)
                Create more registry keys during installation:
                HKEY_LOCAL_MACHINE\System\CurrentControlSet\Control\Session Manager
                HKEY_LOCAL_MACHINE\Software\Microsoft\Windows\CurrentVersion\RunOnce